objects/TESTING__c.object
<CustomObject>
    <fields>
        <fullName>Info__c</fullName>
        <label>Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueUSD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value USD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tracking__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>tracking</label>
        <type>AutoNumber</type>
    </fields>
    <label>TESTING</label>
    <nameField>
        <label>TESTING Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TESTING</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>